<resources>
    <string name="app_name">Hunger Hunt</string>
    <string name="hunger_hunt">Hunger Hunt !!</string>
    <string name="log_in">"Log In"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">New User? Register Here</string>
    <string name="updatePassword">Save Password</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email Id</string>
    <string name="submit">Submit</string>
    <string name="request_otp">Request OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_log_in">Already A User? Log In</string>
    <string name="name">Name</string>
    <string name="address">Delivery Address</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="otp">OTP</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_price">Price</string>
    <string name="rating">0.0</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_id">1</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="add_food">Add</string>
    <string name="remove_food">Remove</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="cost_high_to_low">Cost High to Low</string>
    <string name="cost_low_to_high">Cost Low to High</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="sort">Sort</string>
    <string name="person">/person</string>
    <string name="app_preferences">App Preferences</string>
    <string name="que1">How will the training be delivered?</string>
    <string name="ans1">You will be taught using pre-recorded videos and text tutorials. The training has quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project to get hands-on practice of what you learn during your training.</string>
    <string name="que2">What will be the timings of the training?</string>
    <string name="ans2">As this is a purely online training program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning hours can be decided by students according to their convenience.</string>
    <string name="que3">What is the duration of training?</string>
    <string name="ans3">The training duration is of 6 weeks.</string>
    <string name="que4">How much time should I spend everyday?</string>
    <string name="ans4">We recommend spending 10 to 12 hours per week. However, the actual learning hours can be decided by you as per your convenience.</string>
    <string name="que5">When can I start my training?</string>
    <string name="ans5">You can choose your preferred batch date while signing up for the training program.</string>
    <string name="que6">When will I get the certificate?</string>
    <string name="ans6">You will be able to download the certificate once you complete your training and take the final test.</string>
    <string name="question">Que :</string>
    <string name="answer">Ans :</string>
    <string name="rupee">Rs.</string>
    <string name="place_order">Place Order</string>
    <string name="restaurant">Restaurant :</string>
    <string name="order_total">Order Total</string>
    <string name="total">Total</string>
    <string name="order_placed">Order Placed !!</string>
    <string name="empty_order">You haven\'t placed any orders yet</string>
    <string name="empty_Favourite">You haven\'t added any Restaurant</string>
    <string name="date">Date</string>
    <string name="logo">logo</string>
    <string name="done_animation">Done Animation</string>
    <string name="ok">OK</string>
    <string name="user">user</string>
    <string name="restaurant_logo">Restaurant Logo</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="cart_animation">Cart Animation</string>
    <string name="price">Rs. %s</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="price_per_person">%s /person</string>
</resources>