<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/appHome"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/my_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favouriteRestaurant"
            android:icon="@drawable/favourite"
            android:title="@string/favourite_restaurants" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faqs"
            android:icon="@drawable/faqs"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />
    </group>
</menu>