<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.ForgotPasswordActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imgIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/burger_icon" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/phone_number"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxHeight="43dp"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <Button
        android:id="@+id/btnRequestOTP"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/eina"
        android:gravity="center_vertical|center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/request_otp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:fontFamily="@font/raleway"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/register"
        android:textColor="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4" />

    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:fontFamily="@font/raleway"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/log_in"
        android:textColor="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

</LinearLayout>