<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_margin="1dp"
    android:orientation="horizontal"
    android:weightSum="10">

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/food_id"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@color/lightGrey" />

    <TextView
        android:id="@+id/txtFoodName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="7"
        android:fontFamily="@font/eina"
        android:gravity="center_vertical"
        android:text="@string/food_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:textStyle="bold"
            android:id="@+id/txtFoodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/eina"
            android:text="@string/food_price"
            android:textColor="@color/green"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>