<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.ResetPasswordActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imgIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:scaleType="fitCenter"
        android:src="@drawable/burger_icon" />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/otp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/otp"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/password"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/password"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/re_enter_new_password"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:maxLength="8"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/eina"
        android:gravity="center_vertical|center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</LinearLayout>