<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imgIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:scaleType="fitCenter"
        android:src="@drawable/burger_icon" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/name"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/phone_number"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/address"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        app:errorEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        app:errorEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/re_enter_password"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/eina"
        android:gravity="center_vertical|center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.1" />

    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:fontFamily="@font/raleway"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/user_log_in"
        android:textColor="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

</LinearLayout>