<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragment.MyProfileFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <androidx.cardview.widget.CardView
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        app:cardCornerRadius="65dp">

        <ImageView
            android:contentDescription="@string/user"
            android:id="@+id/imgIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/user_icon" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_end"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_end"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/enter_email"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <TextView
        android:id="@+id/txtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_end"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/enter_phone_number"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_end"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="15sp" />
</LinearLayout>